# transformer-lob-thesis-temp

./: .gitignore  01_THESIS_DATASET.md  02_THESIS_PREPROCESSING.md  CITATION.cff  DATASET.md  LICENSE  README.md  THESIS_CALIBRATION.md  THESIS_DECAY_ANALYSIS.md  THESIS_EVALUATION.md  THESIS_MODELS.md  THESIS_PARAMETERS.md  THESIS_TECHSTACK.md  config.py  data.py  pyproject.toml  requirements.txt  run.py  train.py  trainer.py  utils.py
evaluation/: __init__.py  comparison.py  confidence.py  decay.py  latex.py  metrics.py
models/: __init__.py  decay_attention.py  deeplob.py  lit.py  lit_decay.py  tlob.py  tlob_decay.py
notebooks/: LIT_ANALYSIS_AND_PLAN.md  LIT_STEPS_RESULTS_TABLE.md  class_distribution.py  event_types_per_ticker.py  run_lit_steps.sh  table_4_1_dataset_overview.tex  table_4_2_event_types.tex  table_4_3_data_splits.tex
src/lob_prediction/: __init__.py  __main__.py  cli.py  config.py
src/lob_prediction/data/: __init__.py  dataset.py  loading.py  preprocessing.py
src/lob_prediction/evaluation/: __init__.py  calibration.py  decay_analysis.py  export.py  metrics.py  plotting.py  statistical.py
src/lob_prediction/models/: __init__.py  attention.py  components.py  lit.py  tlob.py
src/lob_prediction/training/: __init__.py  loops.py  trainer.py
src/lob_prediction/utils/: __init__.py  logging.py
src_prediction/: __init__.py  __main__.py  cli.py
src_prediction/data/: __init__.py  dataset.py  loading.py  preprocessing.py
src_prediction/evaluation/: __init__.py  backtest.py  calibration.py  decay_analysis.py  export.py  metrics.py  plotting.py  statistical.py
src_prediction/models/: __init__.py  attention.py  components.py  deeplob.py  lit.py  tlob.py
src_prediction/training/: __init__.py  loops.py  trainer.py
src_prediction/utils/: __init__.py  helpers.py  logging.py  seed.py
