[project]
name = "lob-prediction"
version = "1.0.0"
description = "Transformer-Based Prediction of Limit Order Book Dynamics for Market Making"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Luis Reindlmeier", email = "luis.reindlmeier@fs-students.de" }
]
requires-python = ">=3.10"
keywords = ["deep-learning", "finance", "limit-order-book", "transformer", "market-making"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "einops>=0.7.0",
    "lightning>=2.0.0",
    "pytorch_lightning>=2.0.0",
    "torch_ema>=0.3",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/luisreindlmeier/BT_Transformer_LOB"
Repository = "https://github.com/luisreindlmeier/BT_Transformer_LOB"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "evaluation*"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are OK
"models/*.py" = ["E741"]  # allow ambiguous variable names like 'l' in models

[tool.ruff.lint.isort]
known-first-party = ["config", "data", "trainer", "utils", "models", "evaluation"]

# =============================================================================
# MyPy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^data/",
    "^checkpoints/",
    "^results/",
]

