[project]
name = "lob-prediction"
version = "1.0.0"
description = "Transformer-Based Prediction of Limit Order Book Dynamics for Market Making"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Luis Reindlmeier", email = "luis.reindlmeier@fs-students.de" }
]
requires-python = ">=3.10"
keywords = ["deep-learning", "finance", "limit-order-book", "transformer", "market-making"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "torch>=2.0.0",
    "einops>=0.7.0",
    "lightning>=2.0.0",
    "torch_ema>=0.3",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
lob-prediction = "src_prediction.cli:main"

[project.urls]
Homepage = "https://github.com/luisreindlmeier/BT_Transformer_LOB"
Repository = "https://github.com/luisreindlmeier/BT_Transformer_LOB"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src_prediction/models/*.py" = ["E741"]

[tool.ruff.lint.isort]
known-first-party = ["src_prediction"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^data/",
    "^checkpoints/",
    "^results/",
]
